using translation types

--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.4.1",
     "lite-server": "^2.5.4",
     "systemjs": "^0.19.43"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.3.31",
+    "@types/node": "^12.7.3"
   }
 }
